fix list cutting off when too many items

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ p5{
 ol li{
   list-style-type: none;
 }
+
 .listItems{
   width: 70%;
   height: 20%;
@@ -302,12 +303,18 @@ input[type="checkbox"]:checked + label{
 
 .list{
 	list-style: none;
-	color: rgba(0,0,0,.7);
+  color: rgba(0,0,0,.7);
+  padding-bottom: 40px;
+  overflow: scroll;
 }
 
 .list li:nth-child(odd){
 	background: rgba(0,0,50,.1);
 }
+/* .list :last-child { 
+  margin-bottom: 0 !important; 
+  margin-right: 0 !important; 
+} */
 
 .list li{
 	float: left;
@@ -420,6 +427,7 @@ input[type=submit]:hover {
   width: 85%;
   float: right;
   overflow:hidden;
+  height: 90%;
 }
 body {
 overflow-x: hidden;
